@@ -1,6 +1,7 @@
 void AddSC_zone_borean_tundra_groupquests();
 void AddSC_zone_desolace_groupquests();
 void AddSC_zone_dragonblight_groupquests();
+void AddSC_nagrand_groupquests();
 void AddSC_zone_shadowmoon_valley_groupquests();
 void AddSC_zone_zuldrak_groupquests();
 
@@ -9,6 +10,7 @@ void Addmod_groupquestsScripts()
     AddSC_zone_borean_tundra_groupquests();
     AddSC_zone_desolace_groupquests();
     AddSC_zone_dragonblight_groupquests();
+    AddSC_nagrand_groupquests();
     AddSC_zone_shadowmoon_valley_groupquests();
     AddSC_zone_zuldrak_groupquests();
 }
